[workspace]
resolver = "2"
members = [
    "adapters",
    "analysis",
    "backtest",
    "common",
    "core",
    "data",
    "execution",
    "indicators",
    "infrastructure",
    "model",
    "network",
    "persistence",
    "pyo3",
    "cli"
]

[workspace.package]
rust-version = "1.81.0"
version = "0.31.0"
edition = "2021"
authors = ["Nautech Systems <info@nautechsystems.io>"]
description = "A high-performance algorithmic trading platform and event-driven backtester"
documentation = "https://nautilustrader.io/docs"

[workspace.dependencies]
anyhow = "1.0.87"
bytes = { version = "1.7.1", features = ["serde"] }
chrono = "0.4.38"
derive_builder = "0.20.1"
futures = "0.3.30"
indexmap = { version = "2.5.0", features = ["serde"] }
itertools = "0.12.1"
itoa = "1.0.11"
once_cell = "1.19.0"
log = { version = "0.4.22", features = ["std", "kv_unstable", "serde", "release_max_level_debug"] }
pyo3 = { version = "0.21.2", features = ["rust_decimal"] }
pyo3-asyncio-0-21 = { version = "0.21.0", features = ["tokio-runtime", "tokio", "attributes"] }
rand = "0.8.5"
rmp-serde = "1.3.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
thousands = "0.2.0"
tracing = "0.1.40"
tokio = { version = "1.40.0", features = ["full"] }
ustr = { version = "1.0.0", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }

# dev-dependencies
criterion = "0.5.1"
float-cmp = "0.9.0"
iai = "0.1.1"
pretty_assertions = "1.4.0"
rstest = "0.21.0"
tempfile = "3.12.0"

# build-dependencies
cbindgen = "0.26.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = false  # Fails Cython build if true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = true
debug-assertions = true  # Fails Cython build if true (OK for cargo test)
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
strip = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release-debugging]
inherits = "release"
incremental = true
debug = true
strip = false
