[workspace]
resolver = "2"
members = [
    "adapters/*",
    "analysis",
    "backtest",
    "cli",
    "common",
    "core",
    "cryptography",
    "data",
    "execution",
    "indicators",
    "infrastructure",
    "model",
    "network",
    "persistence",
    "portfolio",
    "pyo3",
    "risk",
    "serialization",
    "test_kit",
]

[workspace.package]
rust-version = "1.84.0"
version = "0.41.0"
edition = "2021"
authors = ["Nautech Systems <info@nautechsystems.io>"]
description = "A high-performance algorithmic trading platform and event-driven backtester"
documentation = "https://nautilustrader.io/docs"

[workspace.dependencies]
anyhow = "1.0.95"
arrow = "53.4.0"  # Keep major version in line with datafusion
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = { version = "1.9.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
derive_builder = "0.20.2"
futures = "0.3.31"
futures-util = "0.3.31"
heck = "0.5.0"
hex = "0.4.3"
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.13.0"
itoa = "1.0.14"
once_cell = "1.20.2"
log = { version = "0.4.25", features = ["std", "kv_unstable", "serde", "release_max_level_debug"] }
parquet = "53.4.0"  # Keep major version in line with datafusion
pyo3 = { version = "0.23.4", features = ["indexmap", "rust_decimal", "smallvec"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["tokio-runtime", "tokio", "attributes"] }
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["blocking"] }
ring = "0.17.8"
rmp-serde = "1.3.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
thousands = "0.2.0"
toml = "0.8.19"
tracing = "0.1.41"
# Disable default feature "tracing-log" since it interferes with custom logging
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["smallvec", "fmt", "ansi", "std", "env-filter"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-native-roots"] }
ustr = { version = "1.1.0", features = ["serde"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }

# dev-dependencies
axum = "0.8.1"
criterion = "0.5.1"
float-cmp = "0.10.0"
iai = "0.1.1"
proptest = "1.6.0"
rstest = "0.24.0"
tempfile = "3.15.0"
tracing-test = "0.2.5"

# build-dependencies
cbindgen = "0.28.0"

[profile.dev]
opt-level = 0
debug = false  # Improves compile times
debug-assertions = false  # Fails Cython build if true
overflow-checks = true
strip = "debuginfo"  # Improves compile times
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.test]
opt-level = 0
debug = false  # Improves compile times
debug-assertions = true  # Fails Cython build if true
overflow-checks = true
strip = "debuginfo"  # Improves compile times
lto = false
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
strip = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release-debugging]
inherits = "release"
incremental = true
debug = true
strip = false
