[package]
name = "nautilus-agent-swarm"
version = "0.1.0"
edition = "2021"
description = "AI-native agent swarm for KuaaMU Quant Engine"
license = "LGPL-3.0-or-later"

[dependencies]
nautilus-core = { path = "../core" }
nautilus-model = { path = "../model" }
nautilus-common = { path = "../common" }
nautilus-execution = { path = "../execution" }
nautilus-state-encoder = { path = "../state_encoder" }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rkyv = { version = "0.8", features = ["bytecheck"] }

# Shared memory
memmap2 = "0.9"

# UUID
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"

# Utilities
ustr = "1"
ahash = "0.8"

[features]
default = []
python = []
